Bug 42412 - Video corruptions with fullscreen XV [SNA, 2.16.901]
Summary: Video corruptions with fullscreen XV [SNA, 2.16.901]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-31 01:14 UTC by Clemens Eisserer
Modified: 2011-10-31 04:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log (28.65 KB, text/plain)
2011-10-31 01:14 UTC, Clemens Eisserer
no flags Details
image corruption in fullscreen (31.41 KB, image/jpeg)
2011-10-31 01:15 UTC, Clemens Eisserer
no flags Details
no corruptions in windowed mode (31.77 KB, image/jpeg)
2011-10-31 01:15 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2011-10-31 01:14:29 UTC
Created attachment 52932 [details]
xorg log

When watching videos fullscreen using mplayer with its XV backend, I get image corruptions (as seen on the screenshots) in combination with SNA - everything works fine with UXA.

intel i945GM

libdrm-2.4.27
pixman-0.23.8
linux-3.1.0
xorg 1.11.1
Comment 1 Clemens Eisserer 2011-10-31 01:15:08 UTC
Created attachment 52933 [details]
image corruption in fullscreen
Comment 2 Clemens Eisserer 2011-10-31 01:15:38 UTC
Created attachment 52934 [details]
no corruptions in windowed mode
Comment 3 Chris Wilson 2011-10-31 02:41:25 UTC
Is that with or without XvMC? Is it possible to have a very short snippet of that file?
Comment 4 Clemens Eisserer 2011-10-31 02:53:02 UTC
Hi,

That is with plain XV, no xvmc. Just tested, happens with any video.

Thanks, Clemens
Comment 5 Clemens Eisserer 2011-10-31 02:54:43 UTC
sorry, doesn't seem to happen with any video - just sent you an email with one that hits the problem.
Comment 6 Chris Wilson 2011-10-31 03:12:37 UTC
Yes, I was wondering if it was specific to either the packed or planar video code paths. I'm not seeing the issue using a PineView on a bare X and mplayer -fs using either -vo xv:adaptor=[01], anything else required?
Comment 7 Chris Wilson 2011-10-31 03:27:01 UTC
Ah, when it's partially offscreen.
Comment 8 Chris Wilson 2011-10-31 04:29:10 UTC
commit b1287e49347e0fff67f43d157fa87758d5cbe588
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Oct 31 11:27:36 2011 +0000

    sna/video: Fix copy region for cropped video
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42412
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Ok, if am I right and it was zoom past the screen extents...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.